Fix clipping of the URL bottom (hopefully)
The original line and div height of 1.2em was chosen because the MDN
documentation for line-height says that the default is roughly
1.2. That is a unitless number, which we cannot use because we need to
specify div heights, but using 1.2em seemed to work just fine for this
purpose. Almost. Depending on font/OS(/other variables?), 0-2 CSS
pixels of the descenders (e.g. the lower hook of "g") are clipped by
the overflow:hidden setting of the URL div.

What we are *trying* to do here is to have a div with the same height
as the full font height, but AFAICT the latter measure is not
available to CSS, so we must resort to using em's. (Also, setting the
line height to the same value as the div height we can have multi-line
divs with exactly N lines visible.) Increasing the line and div height
to 1.3em fixes the clipping when tested on Linux and Windows 10/11
using 1x/1.5x/2x DPI scaling. This fix is simple but not robust, as it
may not work for all fonts, but I cannot think of a "proper" way to
fix this, at least not without making it a lot more complex.

Fixes #44.

--- a/webextension/overlay.css
+++ b/webextension/overlay.css
@@ -52,7 +52,7 @@ div {
     border-style: solid;
     border-width: 0;
     border-color: #909090;
-    line-height: 1.2em; /* hard-coded into JS, do not override */
+    line-height: 1.3em; /* hard-coded into JS, do not override */
 }
 .wrapper {
     /* common for wrapper,url_wrapper,url_begin_wrapper,url_end_wrapper */
@@ -82,7 +82,7 @@ div {
 }
 .multiline #url_begin {
     position: relative;
-    max-height: 2.4em; /* N * line-height, overridden by preferences */
+    max-height: 2.6em; /* N * line-height, overridden by preferences */
     white-space: pre-wrap;
     word-break: break-all;
     z-index: 0;
@@ -95,7 +95,7 @@ div {
     position: relative;
     white-space: pre;
     z-index: 0;
-    height: 1.2em; /* 1*line-height */
+    height: 1.3em; /* 1*line-height */
     overflow: hidden;
 }
 .multiline #url_end {
@@ -103,7 +103,7 @@ div {
     bottom: 0;
     right: 0;
     border-top: 2px dashed #f44;
-    height: 1.2em; /* 1*line-height */
+    height: 1.3em; /* 1*line-height */
     white-space: pre;
     text-align: right;
     z-index: 1;
@@ -113,7 +113,7 @@ div {
     right: 0;
     top: 0;
     width: 50%;
-    height: 1.2em; /* 1*line-height */
+    height: 1.3em; /* 1*line-height */
     overflow: hidden;
 }
 .oneline #url_end {
@@ -122,7 +122,7 @@ div {
     top: 0;
     white-space: pre;
     z-index: 1;
-    height: 1.2em; /* 1*line-height */
+    height: 1.3em; /* 1*line-height */
     text-align: right;
 }
 .overflow {
@@ -130,13 +130,13 @@ div {
     position: absolute;
     z-index: 2;
     width: 3em;
-    height: 1.2em; /* 1*line-height */
+    height: 1.3em; /* 1*line-height */
 }
 #overflow_begin {
     background: linear-gradient(to right, transparent, #cecece);
 }
 .multiline #overflow_begin {
-    bottom: 1.2em;
+    bottom: 1.3em;
     right: 0;
 }
 .oneline #overflow_begin {
